Overflow-x cus of aos

--- a/src/app/landing-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/contact-me/contact-me.component.html
@@ -1,4 +1,4 @@
-<section id="contact" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+<section id="contact">
   <div class="max-wrapper">
     <div>
       <div>
